# emsend

./: .gitignore  Cargo.toml  README.md  README.txt  cfg.toml
examples/: demo1.rs
src/: emailsend.rs  lib.rs  main.rs
